<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sobot_title_workorder_center_string">工单中心</string>
    <string name="sobot_wo_net_error_string">网络错误，请检查网络后重试</string>

    <!--    工单分类列表-->
    <string name="sobot_wo_item_state_not_start_string">尚未受理</string>
    <string name="sobot_wo_item_state_doing_string">受理中</string>
    <string name="sobot_wo_item_state_waiting_string">等待回复</string>
    <string name="sobot_wo_item_state_resolved_string">已解决</string>
    <string name="sobot_wo_item_state_delete_string">已删除</string>
    <string name="sobot_wo_item_state_closed_string">已关闭</string>
    <string name="sobot_wo_accept_order_string">接单成功</string>
    <string name="sobot_desc_create_string">按创建时间倒序</string>
    <string name="sobot_asc_create_string">按创建时间正序</string>
    <string name="sobot_desc_update_string">按更新时间倒序</string>
    <string name="sobot_asc_update_string">按更新时间正序</string>

    <string name="sobot_search_string">搜索</string>
    <string name="sobot_mohu_string">模糊</string>
    <string name="sobot_mohu_search_string">模糊搜索</string>
    <string name="sobot_orderid_string">编号</string>
    <string name="sobot_orderid_search_string">工单编号</string>
    <string name="sobot_ordertitile_string">标题</string>
    <string name="sobot_ordertitle_search_string">工单标题</string>
    <string name="sobot_desc_string">描述</string>
    <string name="sobot_desc_search_string">问题描述</string>
    <string name="sobot_service_string">客服</string>
    <string name="sobot_service_search_string">受理客服</string>
    <string name="sobot_service_search_hide_string">受理客服姓名</string>
    <string name="sobot_search_hide_string">编号/标题/描述/受理客服姓名</string>
    <string name="sobot_search_input_empty_tip_string">输入文字不能为空！</string>
    <!--    <string name="sobot_search_et_hint_string">搜索客户昵称/姓名/邮箱/电话</string>-->
    <!--    <string name="sobot_search_quick_reply_string">搜索：快捷回复</string>-->
    <!--    <string name="sobot_search_smart_reply_string">搜索：智能回复</string>-->
    <!--    <string name="sobot_search_fields_string">搜索选项关键字</string>-->
    <string name="sobot_search_defualt_string">搜索工单信息</string>
    <string name="sobot_search_no_data_string">暂无相关工单信息</string>


    <string name="sobot_wo_create_string">创建新工单</string>
    <string name="sobot_wo_commit_string">提交</string>

    <string name="work_order_user_search_etSearch_hint">搜索客户昵称/姓名/邮箱/电话</string>
    <string name="sobotgongdancreated">当前客户在%1$s小时内创建过工单</string>

    <string name="coustom_search_custom_fields">搜索选项关键字</string>

    <string name="sobot_no_support_call">该设备不支持拨打电话</string>
    <string name="sobot_ctrl_v_success">复制成功！</string>
    <string name="sobot_search_user_info_string">搜索客户信息</string>
    <string name="sobot_combined_field_name_string">组合字段名称</string>
    <string name="sobot_add_string">添加</string>
    <string name="sobot_price_string">【价格】</string>
    <string name="sobot_delete_string">删除</string>
    <string name="sobot_delete_hint_string">要删除这个工单吗？</string>
    <string name="sobot_delete_success_string">删除成功！</string>
    <string name="sobot_tips_string">提示</string>
    <string name="sobot_avoid_repeat_order_string">为了避免同一个客户重复创建工单，请点击查看工单。</string>
    <string name="sobot_cancle_string">取消</string>
    <string name="sobot_ok_string">确定</string>
    <string name="sobot_user_name_string">用户名称</string>
    <string name="sobot_copy_string">复制</string>
    <string name="sobot_my_kefu_group_order">我客服组的新工单</string>
    <string name="sobot_order_classification_string">工单分类</string>
    <string name="sobot_order_ticket_template_string">工单模版</string>
    <string name="sobot_select_work_order_ticket_template_string">请选择工单模版(必填)</string>
    <string name="sobot_select_work_order_ticket_template_tips_string">请选择工单模版</string>
    <string name="sobot_priority_string">优先级：</string>
    <string name="sobot_order_receiving_string">接单</string>
    <string name="sobot_creation_time_string">创建时间:</string>
    <string name="sobot_receiver_string">受理人:</string>
    <string name="sobot_previous_string">上一个</string>
    <string name="sobot_next_string">下一个</string>
    <string name="sobot_reply_string">回复</string>
    <string name="sobot_work_order_content_string">工单内容</string>
    <string name="sobot_work_order_title_string">工单标题(必填)</string>
    <string name="sobot_problem_description_string">问题描述(必填)</string>
    <string name="sobot_only_see_string">仅客服可见</string>
    <string name="sobot_close_reply_all_see_string">关闭后的回复为所有人可见</string>
    <string name="sobot_select_work_order_classification_string">请选择工单分类(必填)</string>
    <string name="sobot_work_order_attribute_string">工单属性</string>
    <string name="sobot_select_user_string">请选择对应客户(必填)</string>
    <string name="sobot_corresponding_customer_string">对应客户</string>
    <string name="sobot_work_order_status_string">工单状态</string>
    <string name="sobot_priority_second_string">优先级</string>
    <string name="sobot_select_service_group_string">选择受理客服组</string>
    <string name="sobot_customer_service_team_string">受理客服组</string>
    <string name="sobot_choose_customer_service_string">选择受理客服</string>
    <string name="sobot_accept_customer_service_string">受理客服</string>
    <string name="sobot_select_copy_customer_service_string">请选择抄送客服</string>
    <string name="sobot_no_select_group_string">不选择客服组</string>
    <string name="sobot_no_select_service_string">不选择客服</string>
    <string name="sobot_no_select_copy_service_string">不选择抄送客服</string>
    <string name="sobot_cc_copy_string">抄送副本</string>
    <string name="sobot_reply_content_string">回复内容</string>
    <string name="sobot_please_wait_a_moment_string">请稍候</string>
    <string name="sobot_continue_editing_string">继续编辑</string>
    <string name="sobot_discard_job_string">是否放弃创建此工单?</string>
    <string name="sobot_give_up_string">放弃</string>
    <string name="sobot_reply_work_order_string">回复工单</string>
    <string name="sobot_edit_work_order_string">编辑工单</string>
    <string name="sobot_delete_work_order_string">删除工单</string>
    <string name="sobot_create_work_order_string">创建新工单</string>
    <string name="sobot_detail_work_order_string">工单详情</string>
    <string name="sobot_source_work_order_string">工单来源</string>
    <string name="sobot_history_work_order_string">操作历史</string>
    <string name="sobot_detail_activation_order_string">激活工单</string>
    <string name="sobot_detail_activation_string">激活</string>
    <string name="sobot_detail_activation_success_string">激活成功</string>
    <string name="sobot_detail_activation_hide_string">备注（必填，最多200字符，仅客服可见）</string>
    <string name="sobot_detail_close_string">收起</string>
    <string name="sobot_detail_open_string">详情</string>
    <string name="sobot_detail_order_reply_string">工单回复</string>
    <string name="sobot_detail_no_reply_string">暂无回复</string>
    <string name="sobot_detail_expand_string">展开全文</string>
    <string name="sobot_no_permission_enabled_string">未开通关闭权限!</string>
    <string name="sobot_submission_failed_string">提交失败！</string>
    <string name="sobot_required_string">必填</string>
    <string name="sobot_total_string">合计</string>
    <string name="sobot_only_50_string">只能添加50条记录</string>
    <string name="sobot_cannot_empty_string">不能为空</string>
    <string name="sobot_title_cannot_be_blank_string">工单标题不能为空</string>
    <string name="sobot__description_cannot_empty_string">工单描述不能为空</string>
    <string name="sobot_category_cannot_empty_string">工单分类不能为空</string>
    <string name="sobot_work_order_user_cannt_empty_string">工单对应客户不能为空</string>
    <string name="sobot_select_customer_service_string">请选择受理客服！</string>
    <string name="sobot_not_chaoguo_five_string">附件数量不能超过5个！</string>
    <string name="sobot_unknown_exception_string">未知异常！</string>
    <string name="sobot_network_error_string">网络错误！</string>
    <string name="sobot_data_error_string">数据不正确</string>
    <string name="sobot_other_string">其他</string>
    <string name="sobot_low_string">低</string>
    <string name="sobot_middle_string">中</string>
    <string name="sobot_height_string">高</string>
    <string name="sobot_urgent_string">紧急</string>
    <string name="sobot_choose_customer_string">选择客户</string>
    <string name="sobot_add_user_string">添加客户</string>
    <string name="sobot_confirm_add_string">确认添加</string>
    <string name="sobot_email_string">邮箱</string>
    <string name="sobot_please_input_email_str">请输入客户邮箱信息</string>
    <string name="sobot_phone_string">电话</string>
    <string name="sobot_nickname_string">昵称</string>
    <string name="sobot_nickname_hide_string">请输入客户昵称</string>
    <string name="sobot_please_input_phone_string">请输入客户联系方式</string>
    <string name="sobot_please_input_remark_string">请输入备注</string>
    <string name="sobot_please_input_remark_hint1_string">备注最多输入200字符，已超出 </string>
    <string name="sobot_please_input_remark_hint2_string"> 字符</string>

    <string name="sobot_wo_create_info">工单创建信息</string>
    <string name="sobot_wo_create_channels">创建渠道</string>
    <string name="sobot_wo_create_creater">创建人</string>


    <string name="sobot_attach_take_pic_string">拍照</string>
    <string name="sobot_choice_form_picture_string">从手机相册选择</string>
    <string name="sobot_str_kicked_string">检测到您的账号已在其他端登录，如非本人操作，建议修改密码！</string>
    <string name="sobot_exit_string">退出</string>
    <string name="sobot_re_login_string">重新登录</string>
    <string name="sobot_continue_adding_string">继续添加</string>
    <string name="sobot_see_order_string">查看工单</string>
    <string name="sobot_categrory_first_string">第一级</string>
    <string name="sobot_categrory_second_string">第二级</string>
    <string name="sobot_categrory_third_string">第三级</string>
    <string name="sobot_categrory_four_string">第四级</string>
    <string name="sobot_categrory_five_string">第五级</string>
    <string name="sobot_complaint_string">投诉</string>
    <string name="sobot_problem_string">问题</string>
    <string name="sobot_affair_affair">事务</string>
    <string name="sobot_fault_string">故障</string>
    <string name="sobot_task_string">任务</string>
    <string name="sobot_all_string">全部</string>


    <string name="sobot_preview_string">预览</string>
    <string name="sobot_deactivated_field_string">已停用字段</string>


</resources>
