<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/work_order_user_search_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sobot_wo_bg_color"
    android:orientation="vertical">

    <include layout="@layout/sobot_common_layout_titlebar" />

    <RelativeLayout
        android:id="@+id/work_order_user_search_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/sobot_wo_second_bg_color"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/work_order_user_search_btnCancle"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/sobot_cancle_string"
            android:textColor="@color/sobot_wo_theme_color"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/work_order_user_search_rlSearchFrameDelete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/work_order_user_search_btnCancle"
            android:background="@drawable/sobot_bg_edit_search"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/work_order_user_search_iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:contentDescription="@null"
                android:src="@drawable/sobot_icon_search_gray" />

            <EditText
                android:id="@+id/work_order_user_search_etSearch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/work_order_user_search_iv_search"
                android:background="@null"
                android:hint="@string/work_order_user_search_etSearch_hint"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/sobot_wo_wenzi_gray1"
                android:textColorHint="@color/sobot_wo_wenzi_gray2"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/work_order_user_search_ivDeleteText"
                style="@style/SobotEditDeleteStyle"
                android:layout_marginRight="0dp"
                android:contentDescription="@null" />
        </RelativeLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/sobot_wo_line_color" />
    <!--下拉刷新-->
    <com.sobot.widget.refresh.layout.SobotRefreshLayout
        android:id="@+id/sobot_srl_workorder_user_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/sobot_wo_bg_color">

        <com.sobot.widget.loading.SobotLoadingLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:llEmptyImage="@drawable/sobot_icon_search_user_default"
            app:llEmptyText="@string/sobot_search_user_info_string">
            <!--列表-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sobot_rv_workorder_user_search_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/sobot_wo_transparent"
                android:overScrollMode="never" />
        </com.sobot.widget.loading.SobotLoadingLayout>

    </com.sobot.widget.refresh.layout.SobotRefreshLayout>

</LinearLayout>